add google analytics

--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
     <link rel="apple-touch-icon" href="assets/favicon.png" />
     <title>Online Game Site</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-PF5LNZJYLL"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-PF5LNZJYLL");
+  </script>
   <body>
     <header>
       <h1>Online Game Site</h1>
@@ -22,6 +36,7 @@
       <a href="/">Home</a>
       <a href="/">All Games</a>
       <a href="#">More Games</a>
+      <a href="#">Policy</a>
     </nav>
     <main class="game-container">
       <h2>All Games</h2>
