--- a/index.html
+++ b/index.html
@@ -50,13 +50,11 @@
             </p>
           </div>
           <div class="play-game">
-            <div>
-              <a
-                href="https://html-online-game.github.io/ztype-game/"
-                target="_blank"
-                >Play</a
-              >
-            </div>
+            <a
+              href="https://html-online-game.github.io/ztype-game/"
+              target="_blank"
+              >Play</a
+            >
           </div>
         </div>
         <div class="game-card">
@@ -76,13 +74,11 @@
             </p>
           </div>
           <div class="play-game">
-            <div>
-              <a
-                href="https://html-online-game.github.io/red-alert2/"
-                target="_blank"
-                >Play</a
-              >
-            </div>
+            <a
+              href="https://html-online-game.github.io/red-alert2/"
+              target="_blank"
+              >Play</a
+            >
           </div>
         </div>
         <div class="game-card">
@@ -106,13 +102,11 @@
             </p>
           </div>
           <div class="play-game">
-            <div>
-              <a
-                href="https://html-online-game.github.io/Flappy-Bird/"
-                target="_blank"
-                >Play</a
-              >
-            </div>
+            <a
+              href="https://html-online-game.github.io/Flappy-Bird/"
+              target="_blank"
+              >Play</a
+            >
           </div>
         </div>
         <div class="game-card">
@@ -144,13 +138,11 @@
             </p>
           </div>
           <div class="play-game">
-            <div>
-              <a
-                href="https://html-online-game.github.io/minecraft/"
-                target="_blank"
-                >Play</a
-              >
-            </div>
+            <a
+              href="https://html-online-game.github.io/minecraft/"
+              target="_blank"
+              >Play</a
+            >
           </div>
         </div>
         <div class="game-card">
@@ -162,13 +154,11 @@
             </p>
           </div>
           <div class="play-game">
-            <div>
-              <a
-                href="https://html-online-game.github.io/Bomberman/"
-                target="_blank"
-                >Play</a
-              >
-            </div>
+            <a
+              href="https://html-online-game.github.io/Bomberman/"
+              target="_blank"
+              >Play</a
+            >
           </div>
         </div>
         <div class="game-card">
@@ -189,13 +179,11 @@
             </p>
           </div>
           <div class="play-game">
-            <div>
-              <a
-                href="https://html-online-game.github.io/Arcade-Car-Racing-Game/"
-                target="_blank"
-                >Play</a
-              >
-            </div>
+            <a
+              href="https://html-online-game.github.io/Arcade-Car-Racing-Game/"
+              target="_blank"
+              >Play</a
+            >
           </div>
         </div>
         <div class="game-card">
@@ -214,13 +202,11 @@
             </p>
           </div>
           <div class="play-game">
-            <div>
-              <a
-                href="https://html-online-game.github.io/ultimate-car-driving/"
-                target="_blank"
-                >Play</a
-              >
-            </div>
+            <a
+              href="https://html-online-game.github.io/ultimate-car-driving/"
+              target="_blank"
+              >Play</a
+            >
           </div>
         </div>
         <div class="game-card">
@@ -238,13 +224,11 @@
             </p>
           </div>
           <div class="play-game">
-            <div>
-              <a
-                href="https://html-online-game.github.io/extreme-motorbike-driving/"
-                target="_blank"
-                >Play</a
-              >
-            </div>
+            <a
+              href="https://html-online-game.github.io/extreme-motorbike-driving/"
+              target="_blank"
+              >Play</a
+            >
           </div>
         </div>
         <div class="game-card">
@@ -260,13 +244,11 @@
             </p>
           </div>
           <div class="play-game">
-            <div>
-              <a
-                href="https://html-online-game.github.io/1v1.lol/"
-                target="_blank"
-                >Play</a
-              >
-            </div>
+            <a
+              href="https://html-online-game.github.io/1v1.lol/"
+              target="_blank"
+              >Play</a
+            >
           </div>
         </div>
         <div class="game-card">
@@ -290,11 +272,9 @@
             </p>
           </div>
           <div class="play-game">
-            <div>
-              <a href="https://html-online-game.github.io/2048/" target="_blank"
-                >Play</a
-              >
-            </div>
+            <a href="https://html-online-game.github.io/2048/" target="_blank"
+              >Play</a
+            >
           </div>
         </div>
         <div class="game-card">
@@ -314,13 +294,11 @@
             </p>
           </div>
           <div class="play-game">
-            <div>
-              <a
-                href="https://html-online-game.github.io/among-us/"
-                target="_blank"
-                >Play</a
-              >
-            </div>
+            <a
+              href="https://html-online-game.github.io/among-us/"
+              target="_blank"
+              >Play</a
+            >
           </div>
         </div>
         <div class="game-card">
@@ -335,13 +313,9 @@
             </p>
           </div>
           <div class="play-game">
-            <div>
-              <a
-                href="https://html-online-game.github.io/pacman/"
-                target="_blank"
-                >Play</a
-              >
-            </div>
+            <a href="https://html-online-game.github.io/pacman/" target="_blank"
+              >Play</a
+            >
           </div>
         </div>
         <div class="game-card">
@@ -360,13 +334,11 @@
             </p>
           </div>
           <div class="play-game">
-            <div>
-              <a
-                href="https://html-online-game.github.io/minesweeper/"
-                target="_blank"
-                >Play</a
-              >
-            </div>
+            <a
+              href="https://html-online-game.github.io/minesweeper/"
+              target="_blank"
+              >Play</a
+            >
           </div>
         </div>
       </div>
