--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h2>All Games</h2>
       <div class="game-list">
         <div class="game-card">
-          <img src="assets/images/z-type.png" alt="Ztype game" />
+          <img src="assets/images/z-type.png" alt="Ztype game" loading="lazy" />
           <div class="game-info">
             <h3>Ztype game</h3>
             <p title="Z-Type is a typing shoot 'em up video game.">
@@ -58,7 +58,11 @@
           </div>
         </div>
         <div class="game-card">
-          <img src="assets/images/red-alert2.png" alt="Red Alert2" />
+          <img
+            src="assets/images/red-alert2.png"
+            alt="Red Alert2"
+            loading="lazy"
+          />
           <div class="game-info">
             <h3>Red Alert2</h3>
             <p
@@ -82,7 +86,11 @@
           </div>
         </div>
         <div class="game-card">
-          <img src="assets/images/flappy-bird.png" alt="Flappy Bird" />
+          <img
+            src="assets/images/flappy-bird.png"
+            alt="Flappy Bird"
+            loading="lazy"
+          />
           <div class="game-info">
             <h3>Flappy Bird</h3>
             <p
@@ -110,7 +118,11 @@
           </div>
         </div>
         <div class="game-card">
-          <img src="assets/images/minecraft.png" alt="Minecraft" />
+          <img
+            src="assets/images/minecraft.png"
+            alt="Minecraft"
+            loading="lazy"
+          />
           <div class="game-info">
             <h3>Minecraft</h3>
             <p
@@ -146,7 +158,11 @@
           </div>
         </div>
         <div class="game-card">
-          <img src="assets/images/bomberman.png" alt="Bomberman" />
+          <img
+            src="assets/images/bomberman.png"
+            alt="Bomberman"
+            loading="lazy"
+          />
           <div class="game-info">
             <h3>Bomberman</h3>
             <p title="Bomberman - Classic 2 to 4 Player Multiplayer Battle">
@@ -165,6 +181,7 @@
           <img
             src="assets/images/arcade-car-racing-game.png"
             alt="Arcade Car Racing Game"
+            loading="lazy"
           />
           <div class="game-info">
             <h3>Arcade Car Racing Game</h3>
@@ -190,6 +207,7 @@
           <img
             src="assets/images/ultimate-car-driving.png"
             alt="Ultimate Car Driving"
+            loading="lazy"
           />
           <div class="game-info">
             <h3>Ultimate Car Driving</h3>
@@ -213,6 +231,7 @@
           <img
             src="assets/images/extreme-motorbike-driving.png"
             alt="Extreme Motorbike Driving"
+            loading="lazy"
           />
           <div class="game-info">
             <h3>Extreme Motorbike Driving</h3>
@@ -232,7 +251,7 @@
           </div>
         </div>
         <div class="game-card">
-          <img src="assets/images/1v1.lol.png" alt="1v1.lol" />
+          <img src="assets/images/1v1.lol.png" alt="1v1.lol" loading="lazy" />
           <div class="game-info">
             <h3>1v1.lol</h3>
             <p
@@ -252,7 +271,7 @@
           </div>
         </div>
         <div class="game-card">
-          <img src="assets/images/2048.png" alt="2048" />
+          <img src="assets/images/2048.png" alt="2048 Game" loading="lazy" />
           <div class="game-info">
             <h3>2048 Game</h3>
             <p
@@ -278,7 +297,7 @@
           </div>
         </div>
         <div class="game-card">
-          <img src="assets/images/among-us.png" alt="Among Us" />
+          <img src="assets/images/among-us.png" alt="Among Us" loading="lazy" />
           <div class="game-info">
             <h3>Among Us Game</h3>
             <p
@@ -302,7 +321,7 @@
           </div>
         </div>
         <div class="game-card">
-          <img src="assets/images/pacman.png" alt="Pacman" />
+          <img src="assets/images/pacman.png" alt="Pacman" loading="lazy" />
           <div class="game-info">
             <h3>Pacman Game</h3>
             <p
@@ -319,7 +338,11 @@
           </div>
         </div>
         <div class="game-card">
-          <img src="assets/images/minesweeper.png" alt="Minesweeper" />
+          <img
+            src="assets/images/minesweeper.png"
+            alt="Minesweeper"
+            loading="lazy"
+          />
           <div class="game-info">
             <h3>Minesweeper Game</h3>
             <p
