--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="icon" href="assets/favicon.png" />
     <link rel="apple-touch-icon" href="assets/favicon.png" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4988552421895566"
+      crossorigin="anonymous"
+    ></script>
     <title>Online Game Site</title>
   </head>
   <!-- Google tag (gtag.js) -->
@@ -28,6 +33,7 @@
 
     gtag("config", "G-PF5LNZJYLL");
   </script>
+  <!-- Google adsense -->
   <body>
     <header>
       <h1>Online Game Site</h1>
