--- a/index.html
+++ b/index.html
@@ -368,6 +368,28 @@
             >
           </div>
         </div>
+        <div class="game-card">
+          <img
+            src="assets/images/ball-sort-puzzle.png"
+            alt="Ball Sort Puzzle"
+            loading="lazy"
+          />
+          <div class="game-info">
+            <h3>Ball Sort Puzzle Game</h3>
+            <p
+              title="Ball Sort Puzzle is a fun and addictive puzzle game! Try to sort the colored balls in the tubes until all balls with the same color stay in the same tube"
+            >
+              Ball Sort Puzzle is a challenging puzzle game that will keep you entertained for hours! Sort the colored balls in the tubes until all of the same-hued balls are in the same tube. A brain-teasing game that is both tough and relaxing!
+            </p>
+          </div>
+          <div class="play-game">
+            <a
+              href="https://html-online-game.github.io/ball-sort-puzzle/"
+              target="_blank"
+              >Play</a
+            >
+          </div>
+        </div>
       </div>
     </main>
     <footer>
