--- a/index.html
+++ b/index.html
@@ -390,6 +390,28 @@
             >
           </div>
         </div>
+        <div class="game-card">
+          <img
+            src="assets/images/8ball-pool.jpg"
+            alt="8 Ball Pool Game"
+            loading="lazy"
+          />
+          <div class="game-info">
+            <h3>8 Ball Poll Game</h3>
+            <p
+              title="8 Ball Pool is a billiards game played on a rectangular table with six pockets (four corners and two sides) and 16 balls: one cue ball (white) and 15 object balls, including seven solid-colored balls (numbered 1-7), seven striped balls (numbered 9-15), and the black 8 ball."
+            >
+             8 Ball Pool is a billiards game played on a rectangular table with six pockets (four corners and two sides) and 16 balls: one cue ball (white) and 15 object balls, including seven solid-colored balls (numbered 1-7), seven striped balls (numbered 9-15), and the black 8 ball.
+            </p>
+          </div>
+          <div class="play-game">
+            <a
+              href="https://html-online-game.github.io/8ball-pool/"
+              target="_blank"
+              >Play</a
+            >
+          </div>
+        </div>
       </div>
     </main>
     <footer>
