--- a/index.html
+++ b/index.html
@@ -412,6 +412,29 @@
             >
           </div>
         </div>
+
+        <div class="game-card">
+          <img
+            src="assets/images/awesome-tanks2.png"
+            alt="Awesome Tanks 2 Game"
+            loading="lazy"
+          />
+          <div class="game-info">
+            <h3>Awesome Tanks 2 Game</h3>
+            <p
+              title="Awesome Tanks 2 is a fast-paced, top-down tank shooter game where players navigate various levels filled with enemies, obstacles, and power-ups. In this game, you control a customizable tank and engage in explosive battles across challenging environments. The gameplay emphasizes both strategy and action, as players can upgrade their tank’s armor, firepower, and speed while unlocking new weapons like missiles and flamethrowers. With destructible environments, hidden areas, and multiple enemy types, Awesome Tanks 2 provides a satisfying mix of mayhem and tactics. The goal is to clear each level by eliminating all enemies and strategically using upgrades to survive tougher challenges as the game progresses."
+            >
+            Awesome Tanks 2 is a fast-paced, top-down tank shooter game where players navigate various levels filled with enemies, obstacles, and power-ups. In this game, you control a customizable tank and engage in explosive battles across challenging environments. The gameplay emphasizes both strategy and action, as players can upgrade their tank’s armor, firepower, and speed while unlocking new weapons like missiles and flamethrowers. With destructible environments, hidden areas, and multiple enemy types, Awesome Tanks 2 provides a satisfying mix of mayhem and tactics. The goal is to clear each level by eliminating all enemies and strategically using upgrades to survive tougher challenges as the game progresses.
+            </p>
+          </div>
+          <div class="play-game">
+            <a
+              href="https://html-online-game.github.io/awesome-tanks2/"
+              target="_blank"
+              >Play</a
+            >
+          </div>
+        </div>
       </div>
     </main>
     <footer>
