--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#1a1a1a" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="icon" href="assets/favicon.png" />
-    <link rel="apple-touch-icon" href="assets/favicon.png" />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="favicon.ico" />
     <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4988552421895566"
