--- a/404.html
+++ b/404.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="favicon.ico" />
+    <!-- Google adsense -->
     <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4988552421895566"
