--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="favicon.ico" />
+    <!-- Google adsense -->
     <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4988552421895566"
@@ -33,14 +34,13 @@
 
     gtag("config", "G-PF5LNZJYLL");
   </script>
-  <!-- Google adsense -->
   <body>
     <header>
       <h1>Online Game Site</h1>
     </header>
     <nav>
       <a href="/">Home</a>
-      <a href="#">Policy</a>
+      <a href="/policy.html">Policy</a>
     </nav>
     <main class="game-container">
       <h2>All Games</h2>
