--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4988552421895566"
       crossorigin="anonymous"
     ></script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-PF5LNZJYLL"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-PF5LNZJYLL");
+    </script>
     <title>Online Game Site</title>
   </head>
-  <!-- Google tag (gtag.js) -->
-  <script
-    async
-    src="https://www.googletagmanager.com/gtag/js?id=G-PF5LNZJYLL"
-  ></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-
-    gtag("config", "G-PF5LNZJYLL");
-  </script>
   <body>
     <header>
       <h1>Online Game Site</h1>
@@ -379,7 +379,10 @@
             <p
               title="Ball Sort Puzzle is a fun and addictive puzzle game! Try to sort the colored balls in the tubes until all balls with the same color stay in the same tube"
             >
-              Ball Sort Puzzle is a challenging puzzle game that will keep you entertained for hours! Sort the colored balls in the tubes until all of the same-hued balls are in the same tube. A brain-teasing game that is both tough and relaxing!
+              Ball Sort Puzzle is a challenging puzzle game that will keep you
+              entertained for hours! Sort the colored balls in the tubes until
+              all of the same-hued balls are in the same tube. A brain-teasing
+              game that is both tough and relaxing!
             </p>
           </div>
           <div class="play-game">
@@ -401,7 +404,11 @@
             <p
               title="8 Ball Pool is a billiards game played on a rectangular table with six pockets (four corners and two sides) and 16 balls: one cue ball (white) and 15 object balls, including seven solid-colored balls (numbered 1-7), seven striped balls (numbered 9-15), and the black 8 ball."
             >
-             8 Ball Pool is a billiards game played on a rectangular table with six pockets (four corners and two sides) and 16 balls: one cue ball (white) and 15 object balls, including seven solid-colored balls (numbered 1-7), seven striped balls (numbered 9-15), and the black 8 ball.
+              8 Ball Pool is a billiards game played on a rectangular table with
+              six pockets (four corners and two sides) and 16 balls: one cue
+              ball (white) and 15 object balls, including seven solid-colored
+              balls (numbered 1-7), seven striped balls (numbered 9-15), and the
+              black 8 ball.
             </p>
           </div>
           <div class="play-game">
@@ -412,7 +419,6 @@
             >
           </div>
         </div>
-
         <div class="game-card">
           <img
             src="assets/images/awesome-tanks2.png"
@@ -424,12 +430,97 @@
             <p
               title="Awesome Tanks 2 is a fast-paced, top-down tank shooter game where players navigate various levels filled with enemies, obstacles, and power-ups. In this game, you control a customizable tank and engage in explosive battles across challenging environments. The gameplay emphasizes both strategy and action, as players can upgrade their tank’s armor, firepower, and speed while unlocking new weapons like missiles and flamethrowers. With destructible environments, hidden areas, and multiple enemy types, Awesome Tanks 2 provides a satisfying mix of mayhem and tactics. The goal is to clear each level by eliminating all enemies and strategically using upgrades to survive tougher challenges as the game progresses."
             >
-            Awesome Tanks 2 is a fast-paced, top-down tank shooter game where players navigate various levels filled with enemies, obstacles, and power-ups. In this game, you control a customizable tank and engage in explosive battles across challenging environments. The gameplay emphasizes both strategy and action, as players can upgrade their tank’s armor, firepower, and speed while unlocking new weapons like missiles and flamethrowers. With destructible environments, hidden areas, and multiple enemy types, Awesome Tanks 2 provides a satisfying mix of mayhem and tactics. The goal is to clear each level by eliminating all enemies and strategically using upgrades to survive tougher challenges as the game progresses.
+              Awesome Tanks 2 is a fast-paced, top-down tank shooter game where
+              players navigate various levels filled with enemies, obstacles,
+              and power-ups. In this game, you control a customizable tank and
+              engage in explosive battles across challenging environments. The
+              gameplay emphasizes both strategy and action, as players can
+              upgrade their tank’s armor, firepower, and speed while unlocking
+              new weapons like missiles and flamethrowers. With destructible
+              environments, hidden areas, and multiple enemy types, Awesome
+              Tanks 2 provides a satisfying mix of mayhem and tactics. The goal
+              is to clear each level by eliminating all enemies and
+              strategically using upgrades to survive tougher challenges as the
+              game progresses.
             </p>
           </div>
           <div class="play-game">
             <a
               href="https://html-online-game.github.io/awesome-tanks2/"
+              target="_blank"
+              >Play</a
+            >
+          </div>
+        </div>
+        <div class="game-card">
+          <img
+            src="assets/images/ballistic.png"
+            alt="Ballistic Game"
+            loading="lazy"
+          />
+          <div class="game-info">
+            <h3>Ballistic Game</h3>
+            <p
+              title="Ballistic, the ball shooter game
+In this classic game, you shoot balls at tiles to eliminate them and earn points. The goal is to clear all the tiles before they reach the bottom of the screen."
+            >
+              Ballistic, the ball shooter game In this classic game, you shoot
+              balls at tiles to eliminate them and earn points. The goal is to
+              clear all the tiles before they reach the bottom of the screen.
+            </p>
+          </div>
+          <div class="play-game">
+            <a
+              href="https://html-online-game.github.io/ballistic/"
+              target="_blank"
+              >Play</a
+            >
+          </div>
+        </div>
+
+        <div class="game-card">
+          <img
+            src="assets/images/basket-and-ball.png"
+            alt="Basket & Ball Game"
+            loading="lazy"
+          />
+          <div class="game-info">
+            <h3>Basket & Ball Game</h3>
+            <p
+              title="Basket & Ball is a game that involves basketball-themed gameplay and challenges, such as arcade mode, shootout challenges, and collecting stars."
+            >
+              Basket & Ball is a game that involves basketball-themed gameplay
+              and challenges, such as arcade mode, shootout challenges, and
+              collecting stars.
+            </p>
+          </div>
+          <div class="play-game">
+            <a
+              href="https://html-online-game.github.io/basket-and-ball/"
+              target="_blank"
+              >Play</a
+            >
+          </div>
+        </div>
+
+        <div class="game-card">
+          <img
+            src="assets/images/biker-street.png"
+            alt="Biker Street Game"
+            loading="lazy"
+          />
+          <div class="game-info">
+            <h3>Biker Street Game</h3>
+            <p
+              title="Bike Fighting Stunt Highway Game is a 3D motorcycle racing game with intense battles, challenging tracks, and power-ups."
+            >
+              Bike Fighting Stunt Highway Game is a 3D motorcycle racing game
+              with intense battles, challenging tracks, and power-ups.
+            </p>
+          </div>
+          <div class="play-game">
+            <a
+              href="https://html-online-game.github.io/biker-street/"
               target="_blank"
               >Play</a
             >
