--- a/index.html
+++ b/index.html
@@ -461,8 +461,7 @@
           <div class="game-info">
             <h3>Ballistic Game</h3>
             <p
-              title="Ballistic, the ball shooter game
-In this classic game, you shoot balls at tiles to eliminate them and earn points. The goal is to clear all the tiles before they reach the bottom of the screen."
+              title="Ballistic, the ball shooter game In this classic game, you shoot balls at tiles to eliminate them and earn points. The goal is to clear all the tiles before they reach the bottom of the screen."
             >
               Ballistic, the ball shooter game In this classic game, you shoot
               balls at tiles to eliminate them and earn points. The goal is to
@@ -477,7 +476,6 @@ In this classic game, you shoot balls at tiles to eliminate them and earn points
             >
           </div>
         </div>
-
         <div class="game-card">
           <img
             src="assets/images/basket-and-ball.png"
@@ -502,7 +500,6 @@ In this classic game, you shoot balls at tiles to eliminate them and earn points
             >
           </div>
         </div>
-
         <div class="game-card">
           <img
             src="assets/images/biker-street.png"
@@ -521,6 +518,52 @@ In this classic game, you shoot balls at tiles to eliminate them and earn points
           <div class="play-game">
             <a
               href="https://html-online-game.github.io/biker-street/"
+              target="_blank"
+              >Play</a
+            >
+          </div>
+        </div>
+        <div class="game-card">
+          <img
+            src="assets/images/swingo.png"
+            alt="Swingo Game"
+            loading="lazy"
+          />
+          <div class="game-info">
+            <h3>BSwingo Game</h3>
+            <p
+              title="Swingo is an arcade game that combines the platform and action genres into one fun package. You control a cute bouncy character that can only move around using a grappling hook."
+            >
+            Swingo is an arcade game that combines the platform and action genres into one fun package. 
+            You control a cute bouncy character that can only move around using a grappling hook.
+            </p>
+          </div>
+          <div class="play-game">
+            <a
+              href="https://html-online-game.github.io/swingo/"
+              target="_blank"
+              >Play</a
+            >
+          </div>
+        </div>
+
+        <div class="game-card">
+          <img
+            src="assets/images/3pandas-in-japan.png"
+            alt="3 Pandas in japan Game"
+            loading="lazy"
+          />
+          <div class="game-info">
+            <h3>3 Pandas in japan Game</h3>
+            <p
+              title="The Pandas are back are ready to escape another beautiful country. Help the pandas escape from Japan in one piece."
+            >
+            The Pandas are back are ready to escape another beautiful country. Help the pandas escape from Japan in one piece.
+            </p>
+          </div>
+          <div class="play-game">
+            <a
+              href="https://html-online-game.github.io/3pandas-in-japan/"
               target="_blank"
               >Play</a
             >
