--- a/index.html
+++ b/index.html
@@ -546,7 +546,6 @@
             >
           </div>
         </div>
-
         <div class="game-card">
           <img
             src="assets/images/3pandas-in-japan.png"
@@ -564,6 +563,29 @@
           <div class="play-game">
             <a
               href="https://html-online-game.github.io/3pandas-in-japan/"
+              target="_blank"
+              >Play</a
+            >
+          </div>
+        </div>
+
+        <div class="game-card">
+          <img
+            src="assets/images/wiggle.png"
+            alt="Wiggle Game"
+            loading="lazy"
+          />
+          <div class="game-info">
+            <h3>Wiggle Game</h3>
+            <p
+              title="You are a tiny worm. Well, not really, but in Wiggle you play as a cute little invertebrate who is fleeing from the flood and has to cover as much distance as possible. And as if life isn't hard enough already, there are many dangerous obstacles on your way."
+            >
+            You are a tiny worm. Well, not really, but in Wiggle you play as a cute little invertebrate who is fleeing from the flood and has to cover as much distance as possible. And as if life isn't hard enough already, there are many dangerous obstacles on your way.
+            </p>
+          </div>
+          <div class="play-game">
+            <a
+              href="https://html-online-game.github.io/wiggle/"
               target="_blank"
               >Play</a
             >
