--- a/index.html
+++ b/index.html
@@ -568,7 +568,6 @@
             >
           </div>
         </div>
-
         <div class="game-card">
           <img
             src="assets/images/wiggle.png"
@@ -586,6 +585,29 @@
           <div class="play-game">
             <a
               href="https://html-online-game.github.io/wiggle/"
+              target="_blank"
+              >Play</a
+            >
+          </div>
+        </div>
+        <div class="game-card">
+          <img
+            src="assets/images/hoop-royale.png"
+            alt="Hoop Royale Game"
+            loading="lazy"
+          />
+          <div class="game-info">
+            <h3>Hoop Royale Game</h3>
+            <p
+              title="Hoop Royale is a casual, physics-based arcade game where the primary objective is to successfully throw a hoop around a moving ball, essentially hooping it, by strategically aiming and timing your throws to score points; the game often features a competitive multiplayer mode where players try to outscore each other by making the most hoops within a set time limit."
+            >
+            Hoop Royale is a casual, physics-based arcade game where the primary objective is to successfully throw a hoop around a moving ball, 
+            essentially hooping it, by strategically aiming and timing your throws to score points; the game often features a competitive multiplayer mode where players try to outscore each other by making the most hoops within a set time limit.
+            </p>
+          </div>
+          <div class="play-game">
+            <a
+              href="https://html-online-game.github.io/hoop-royale/"
               target="_blank"
               >Play</a
             >
