--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
             <p
               title="Subway Surfers is to outrun a train inspector while dodging oncoming trains, barriers and other objects. Collecting coins on the way gives players advantages such as hover boards and high scores."
             >
-              Subway Surfers is to outrun a train inspector while dodging oncoming trains, barriers and other objects. Collecting coins on the way gives players advantages such as hover boards and high scores.
+              Subway Surfers is to outrun a train inspector while dodging
+              oncoming trains, barriers and other objects. Collecting coins on
+              the way gives players advantages such as hover boards and high
+              scores.
             </p>
           </div>
           <div class="play-game">
@@ -233,14 +236,13 @@
             <p
               title="Swingo is an arcade game that combines the platform and action genres into one fun package. You control a cute bouncy character that can only move around using a grappling hook."
             >
-            Swingo is an arcade game that combines the platform and action genres into one fun package. 
-            You control a cute bouncy character that can only move around using a grappling hook.
+              Swingo is an arcade game that combines the platform and action
+              genres into one fun package. You control a cute bouncy character
+              that can only move around using a grappling hook.
             </p>
           </div>
           <div class="play-game">
-            <a
-              href="https://html-online-game.github.io/swingo/"
-              target="_blank"
+            <a href="https://html-online-game.github.io/swingo/" target="_blank"
               >Play</a
             >
           </div>
@@ -256,7 +258,8 @@
             <p
               title="The Pandas are back are ready to escape another beautiful country. Help the pandas escape from Japan in one piece."
             >
-            The Pandas are back are ready to escape another beautiful country. Help the pandas escape from Japan in one piece.
+              The Pandas are back are ready to escape another beautiful country.
+              Help the pandas escape from Japan in one piece.
             </p>
           </div>
           <div class="play-game">
@@ -278,13 +281,14 @@
             <p
               title="You are a tiny worm. Well, not really, but in Wiggle you play as a cute little invertebrate who is fleeing from the flood and has to cover as much distance as possible. And as if life isn't hard enough already, there are many dangerous obstacles on your way."
             >
-            You are a tiny worm. Well, not really, but in Wiggle you play as a cute little invertebrate who is fleeing from the flood and has to cover as much distance as possible. And as if life isn't hard enough already, there are many dangerous obstacles on your way.
+              You are a tiny worm. Well, not really, but in Wiggle you play as a
+              cute little invertebrate who is fleeing from the flood and has to
+              cover as much distance as possible. And as if life isn't hard
+              enough already, there are many dangerous obstacles on your way.
             </p>
           </div>
           <div class="play-game">
-            <a
-              href="https://html-online-game.github.io/wiggle/"
-              target="_blank"
+            <a href="https://html-online-game.github.io/wiggle/" target="_blank"
               >Play</a
             >
           </div>
@@ -300,8 +304,12 @@
             <p
               title="Hoop Royale is a casual, physics-based arcade game where the primary objective is to successfully throw a hoop around a moving ball, essentially hooping it, by strategically aiming and timing your throws to score points; the game often features a competitive multiplayer mode where players try to outscore each other by making the most hoops within a set time limit."
             >
-            Hoop Royale is a casual, physics-based arcade game where the primary objective is to successfully throw a hoop around a moving ball, 
-            essentially hooping it, by strategically aiming and timing your throws to score points; the game often features a competitive multiplayer mode where players try to outscore each other by making the most hoops within a set time limit.
+              Hoop Royale is a casual, physics-based arcade game where the
+              primary objective is to successfully throw a hoop around a moving
+              ball, essentially hooping it, by strategically aiming and timing
+              your throws to score points; the game often features a competitive
+              multiplayer mode where players try to outscore each other by
+              making the most hoops within a set time limit.
             </p>
           </div>
           <div class="play-game">
@@ -311,7 +319,7 @@
               >Play</a
             >
           </div>
-        </div>        
+        </div>
         <div class="game-card">
           <img
             src="assets/images/flappy-bird.png"
@@ -591,7 +599,7 @@
             >
           </div>
         </div>
-       
+
         <div class="game-card">
           <img src="assets/images/z-type.png" alt="Ztype game" loading="lazy" />
           <div class="game-info">
