--- a/404.html
+++ b/404.html
@@ -9,9 +9,9 @@
     <meta name="author" content="Seiri" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#1a1a1a" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="https://html-online-game.github.io/assets/css/style.css" />
+    <link rel="icon" href="https://html-online-game.github.io/favicon.ico" />
+    <link rel="apple-touch-icon" href="https://html-online-game.github.io/favicon.ico" />
     <title>Online Game Site</title>
   </head>
   <!-- Google tag (gtag.js) -->
@@ -25,7 +25,6 @@
       dataLayer.push(arguments);
     }
     gtag("js", new Date());
-
     gtag("config", "G-PF5LNZJYLL");
   </script>
   <body>
@@ -33,14 +32,12 @@
       <h1>Online Game Site</h1>
     </header>
     <nav>
-      <a href="/">Home</a>
-      <a href="/policy.html">Policy</a>
+      <a href="https://html-online-game.github.io/">Home</a>
+      <a href="https://html-online-game.github.io/policy.html">Policy</a>
     </nav>
     <main class="not-found-container">
       <h2>404</h2>
-      <div>
-        Page not found.
-      </div>
+      <div>Page not found.</div>
     </main>
     <footer>
       <p>&copy; 2024 Online Game Site. All rights reserved.</p>
